infrastructure/controllers/overlays/k3d-example/traefik/ingress-k3d.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-k3d-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.k3d-example.lessingstrasse.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000
  tls:
  - hosts:
    - traefik.k3d-example.lessingstrasse.org
    secretName: traefik.k3d-example.lessingstrasse.org
